--- a/index.html
+++ b/index.html
@@ -31,118 +31,331 @@
         <hr>
 
         <section id="main_content">
-          <h3>Welcome to DECAF2</h3>
+          <h3>Welcome</h3>
+          <p>
+            <a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4785456">A Markovian Dependability Model with Cascading Failures</a>
+          </p>
+          <p>Mihir Sanghavi and Sashank Tadepalli, undergraduate students at New Jersey Institute of Technology alongside Professor Marvin Nakayamam, have developed a cutting-edge implementation of DECAF.&nbsp;&nbsp;Shown below are the results of various tests run across various versions of this software.&nbsp;&nbsp;We provide Hardware and Software specifications so these tests can be recreated at a future date.&nbsp;&nbsp;All time-based results are averaged over 3 trial runs (except for 1944+ State Models).</p>
+          <h3>Versions</h3>
+          <p>
+            Version 1.0 and 1.5 are the initial versions of DECAF.  The essential algorithms and program logic is created in Version 1.0, as well as some naive implementations of the Tree Generation algorithm.  Version 1.5 adds some performance enhancements in the form of caching.   The caching occurs at an analytical level as well as software/programming level.  Essentially, every transition from F to T is treated as a LikeTransition.   When we accumulate all of the LikeTransitions, it becomes apparent that the program does not need to recreate trees for the same LikeTransition.
+          </p>
+          <p>
+            Version 2.0 takes it a step further in performance enhancements.  A revolutionary new Tree Generation algorithm is put to the test, and the results are remarkable.  Furthermore, smaller enhancements were made to State Generation (enumeration over component redundancies) as well as XML parsing (no more DOM).
+          </p>
+          <h3>Hardware</h3>
+          <table>
+            <tr>
+              <td>
+                CPU
+              </td>
+              <td>
+                2.7 Ghz (Intel Xeon 2667) @ 4x32 + 4x32 + 4x6144
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Memory
+              </td>
+              <td>
+                1.7 GB @ 333 Mhz
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Hard Drive
+              </td>
+              <td>
+                30GB virtualized by RHEL
+              </td>
+            </tr>
+          </table>
 
-<p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4785456">A Markovian Dependability Model with Cascading Failures</a> </p>
+          <h3>Software</h3>
+          <table>
+              <tr>
+                  <td>Operating System</td>
+                  <td>Microsoft Windows Server 2008 R2 Datacenter 7601</td>
+              </tr>
+              <tr>
+                  <td>OS Virtualization</td>
 
-<p>Mihir Sanghavi and Sashank Tadepalli, undergraduate students at New Jersey Institute of Technology alongside Professor Marvin Nakayamam, have developed a cutting-edge implementation of DECAF.</p>
+                  <td>XEN</td>
+              </tr>
+              <tr>
+                  <td>Java (JDK) Version</td>
+                  <td>7</td>
+              </tr>
+              <tr>
+                  <td>JavaVM Arguments</td>
+                  <td>-Xmx1500m</td>
+              </tr>
+              <tr>
+                  <td>Java IDE</td>
+                  <td>Eclipse Juno</td>
+              </tr>
+          </table>
 
-<h3>Benchmark</h3>
-
-<pre><code> ______  _______ _______ _______ _______      _____ _____
- |     \ |______ |       |_____| |______        |     |  
- |_____/ |______ |______ |     | |            __|__ __|__
-
-Hardware Setup
---------------------------------------------------------------------------------
-   CPU:                    2.7 Ghz (Intel Xeon 2667) @ 4x32 + 4x32 + 4x6144
-   Memory:                 1.7 GB @ 333 Mhz
-   HardDisk                30GB virtualized by RHEL
-
-Software Setup
---------------------------------------------------------------------------------
-   Operating System:       Microsoft Windows Server 2008 R2 Datacenter 7601
-   Virtualization:         XEN
-   Java Version:           7
-   JavaVM Arguments:       -Xmx1500m
-   IDE:                    Eclipse Juno
-
-Benchmarks
---------------------------------------------------------------------------------
-Note:  The "Reused Trees" statistic is slightly different between the two
-       versions of code.   We try to represent this statistic as the count of
-       times a tree was NOT calculated, but the tree was picked up from cache.
-       As noted by the results, more trees were hits from cache in the new code
-       - this is primarily due to the power of the BreadthHistory logic developed
-       by Mihir.
-
---------------------------------------------------------------------------------
-81 State Model | 3803 Trees
---------------------------------------------------------------------------------
-   Version                 v1.0          |   v1.5          |   v2.0
-   --------------------------------------------------------------------------
-   XML Parsing (s):        0.538195872   |   0.347897412   |   0.347859024
-   StateGenerator (s):     0.009461472   |   0.014582006   |   0.004763136
-   QMatrixGenerator (s):   1.405532655   |   0.277618467   |   0.377838848
-   Reused Trees:           0             |   1215          |   1215
---------------------------------------------------------------------------------
-
---------------------------------------------------------------------------------
-288 State Model | 42816 Trees
---------------------------------------------------------------------------------
-   Version                 v1.0          |   v1.5          |   v2.0
-   --------------------------------------------------------------------------
-   XML Parsing:            0.703253968   |   0.470909536   |   0.349191504
-   StateGenerator:         0.084235264   |   0.023053952   |   0.008494096
-   QMatrixGenerator:       22.94189494   |   9.447867808   |   0.891594528
-   Reused Trees:           0             |   4507          |   6912
---------------------------------------------------------------------------------
-
---------------------------------------------------------------------------------
-640 State Model | 437866 Trees
---------------------------------------------------------------------------------
-   Version                 v1.0          |   v1.5          |   v2.0
-   --------------------------------------------------------------------------
-   XML Parsing:            0.530996081   |   0.483729645   |   0.262888448
-   StateGenerator:         0.030771120   |   0.118595665   |   0.011125088
-   QMatrixGenerator:       349.5213188   |   91.86788622   |   6.043573247
-   Reused Trees:           0             |   27746         |   29360
---------------------------------------------------------------------------------
-
---------------------------------------------------------------------------------
-1440 State Model | 185064 Trees
---------------------------------------------------------------------------------
-   Version                 v1.0          |   v1.5          |   v2.0
-   --------------------------------------------------------------------------
-   XML Parsing:            0.486194976   |   0.568334416   |   0.328434512
-   StateGenerator:         0.095746464   |   0.123831472   |   0.017252384
-   QMatrixGenerator:       2374.502689   |   118.9196693   |   27.03615324
-   Reused Trees:           3899          |   106560
---------------------------------------------------------------------------------
-
---------------------------------------------------------------------------------
-1944 State Model | 194404 Trees
---------------------------------------------------------------------------------
-   Version                 v1.0          |   v1.5          |   v2.0
-   --------------------------------------------------------------------------
-   XML Parsing:            0.588945296   |   0.503568608   |   0.264800304
-   StateGenerator:         0.047809611   |   0.039703648   |   0.018026912
-   QMatrixGenerator:       7722.709750   |   425.7825838   |   14.10575419
-   Reused Trees:           0             |   6328          |   153576
---------------------------------------------------------------------------------
-
---------------------------------------------------------------------------------
-4096 State Model | 49664 Trees
---------------------------------------------------------------------------------
-   Version                 v1.0          |   v1.5          |   v2.0
-   --------------------------------------------------------------------------
-   XML Parsing:            0.571897376   |   0.518986208   |   0.327514634
-   StateGenerator:         0.164754384   |   0.127744208   |   0.029360624
-   QMatrixGenerator:       33308.70585   |   1521.175887   |   213.7326432
-   Reused Trees:           0             |   47            |   527345
---------------------------------------------------------------------------------
-
---------------------------------------------------------------------------------
-6144 State Model | 75520 Trees
---------------------------------------------------------------------------------
-   Version                 v1.0          |   v1.5          |   v2.0
-   --------------------------------------------------------------------------
-   XML Parsing:            0.526125392   |   0.480173344   |   0.327510112
-   StateGenerator:         0.277208336   |   0.127744208   |   0.037197824
-   QMatrixGenerator:       4200.160334   |   1198.807579
-   Reused Trees:           0             |   47            |   1056738
---------------------------------------------------------------------------------
-</code></pre>
+          <h3>Benchmark Results</h3>
+          <table>
+              <thead>
+                <tr>
+                    <th colspan="4">81 State Model (3803 Trees)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>v1.0</td>
+                    <td>v1.5</td>
+                    <td>v2.0</td>
+                </tr>
+              </thead>
+              <tr>
+                  <td>XML Parsing (s)</td>
+                  <td slowest>0.538195872</td>
+                  <td>0.347897412</td>
+                  <td fastest>0.347859024</td>
+              </tr>
+              <tr>
+                  <td>State Generation (s)</td>
+                  <td>0.009461472</td>
+                  <td slowest>0.014582006</td>
+                  <td fastest>0.004763136</td>
+              </tr>
+              <tr>
+                  <td>QMatrix Generation (s)</td>
+                  <td slowest>1.405532655</td>
+                  <td>0.677618467</td>
+                  <td fastest>0.377838848</td>
+              </tr>
+              <tr>
+                  <td># of Reused Trees</td>
+                  <td>0</td>
+                  <td>810</td>
+                  <td>810</td>
+              </tr>
+            </table>
+            <table>
+              <thead>
+                <tr>
+                    <th colspan="4">288 State Model (42816 Trees)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>v1.0</td>
+                    <td>v1.5</td>
+                    <td>v2.0</td>
+                </tr>
+              </thead>
+              <tr>
+                  <td>XML Parsing (s)</td>
+                  <td slowest>0.703253968</td>
+                  <td>0.470909536</td>
+                  <td fastest>0.349191504</td>
+              </tr>
+              <tr>
+                  <td>State Generation (s)</td>
+                  <td slowest>0.084235264</td>
+                  <td>0.023053952</td>
+                  <td fastest>0.008494096</td>
+              </tr>
+              <tr>
+                  <td>QMatrix Generation (s)</td>
+                  <td slowest>22.94189494</td>
+                  <td>9.447867808</td>
+                  <td fastest>0.891594528</td>
+              </tr>
+              <tr>
+                  <td># of Reused Trees</td>
+                  <td>0</td>
+                  <td>4104</td>
+                  <td>4104</td>
+              </tr>
+            </table>
+            <table>
+              <thead>
+                <tr>
+                    <th colspan="4">640 State Model (437866 Trees)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>v1.0</td>
+                    <td>v1.5</td>
+                    <td>v2.0</td>
+                </tr>
+              </thead>
+              <tr>
+                  <td>XML Parsing (s)</td>
+                  <td slowest>0.530996081</td>
+                  <td>0.483729645</td>
+                  <td fastest>0.262888448</td>
+              </tr>
+              <tr>
+                  <td>State Generation (s)</td>
+                  <td>0.030771120</td>
+                  <td slowest>0.118595665</td>
+                  <td fastest>0.011125088</td>
+              </tr>
+              <tr>
+                  <td>QMatrix Generation (s)</td>
+                  <td slowest>349.5213188</td>
+                  <td>91.86788622</td>
+                  <td fastest>6.043573247</td>
+              </tr>
+              <tr>
+                  <td># of Reused Trees</td>
+                  <td>0</td>
+                  <td>13830</td>
+                  <td>13830</td>
+              </tr>
+            </table>
+            <table>
+              <thead>
+                <tr>
+                    <th colspan="4">1440 State Model (185064 Trees)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>v1.0</td>
+                    <td>v1.5</td>
+                    <td>v2.0</td>
+                </tr>
+              </thead>
+              <tr>
+                  <td>XML Parsing (s)</td>
+                  <td>0.486194976</td>
+                  <td slowest>0.568334416</td>
+                  <td fastest>0.328434512</td>
+              </tr>
+              <tr>
+                  <td>State Generation (s)</td>
+                  <td>0.095746464</td>
+                  <td slowest>0.123831472</td>
+                  <td fastest>0.017252384</td>
+              </tr>
+              <tr>
+                  <td>QMatrix Generation (s)</td>
+                  <td slowest>2374.502689</td>
+                  <td>118.9196693</td>
+                  <td fastest>27.03615324</td>
+              </tr>
+              <tr>
+                  <td># of Reused Trees</td>
+                  <td>0</td>
+                  <td>35586</td>
+                  <td>35586</td>
+              </tr>
+            </table>
+            <table>
+              <thead>
+                <tr>
+                    <th colspan="4">1944 State Model (194404 Trees)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>v1.0</td>
+                    <td>v1.5</td>
+                    <td>v2.0</td>
+                </tr>
+              </thead>
+              <tr>
+                  <td>XML Parsing (s)</td>
+                  <td slowest>0.588945296</td>
+                  <td>0.503568608</td>
+                  <td fastest>0.264800304</td>
+              </tr>
+              <tr>
+                  <td>State Generation (s)</td>
+                  <td slowest>0.047809611</td>
+                  <td>0.039703648</td>
+                  <td fastest>0.018026912</td>
+              </tr>
+              <tr>
+                  <td>QMatrix Generation (s)</td>
+                  <td slowest>7722.709750</td>
+                  <td>425.7825838</td>
+                  <td fastest>14.10575419</td>
+              </tr>
+              <tr>
+                  <td># of Reused Trees</td>
+                  <td>0</td>
+                  <td>46488</td>
+                  <td>46488</td>
+              </tr>
+            </table>
+            <table>
+              <thead>
+                <tr>
+                    <th colspan="4">4096 State Model (49664 Trees)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>v1.0</td>
+                    <td>v1.5</td>
+                    <td>v2.0</td>
+                </tr>
+              </thead>
+              <tr>
+                  <td>XML Parsing (s)</td>
+                  <td slowest>0.571897376</td>
+                  <td>0.518986208</td>
+                  <td fastest>0.327514634</td>
+              </tr>
+              <tr>
+                  <td>State Generation (s)</td>
+                  <td slowest>0.164754384</td>
+                  <td>0.127744208</td>
+                  <td fastest>0.029360624</td>
+              </tr>
+              <tr>
+                  <td>QMatrix Generation (s)</td>
+                  <td slowest>33308.70585</td>
+                  <td>1521.175887</td>
+                  <td fastest>213.7326432</td>
+              </tr>
+              <tr>
+                  <td># of Reused Trees</td>
+                  <td>0</td>
+                  <td>34560</td>
+                  <td>34560</td>
+              </tr>
+            </table>
+            <table>
+              <thead>
+                <tr>
+                    <th colspan="4">6144 State Model (75520 Trees)</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>v1.0</td>
+                    <td>v1.5</td>
+                    <td>v2.0</td>
+                </tr>
+              </thead>
+              <tr>
+                  <td>XML Parsing (s)</td>
+                  <td slowest>0.526125392</td>
+                  <td>0.480173344</td>
+                  <td fastest>0.327510112</td>
+              </tr>
+              <tr>
+                  <td>State Generation (s)</td>
+                  <td slowest>0.277208336</td>
+                  <td>0.127744208</td>
+                  <td fastest>0.037197824</td>
+              </tr>
+              <tr>
+                  <td>QMatrix Generation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>4200.160334</td>
+                  <td fastest>1198.807579</td>
+              </tr>
+              <tr>
+                  <td># of Reused Trees</td>
+                  <td>0</td>
+                  <td>52864</td>
+                  <td>52864</td>
+              </tr>
+          </table>
         </section>
 
         <footer>
