Added MTTF/SSU Changes
- Typo fixed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>
             <a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4785456">A Markovian Dependability Model with Cascading Failures</a>
           </p>
-          <p>Mihir Sanghavi and Sashank Tadepalli, undergraduate students at New Jersey Institute of Technology alongside Professor Marvin Nakayamam, have developed a cutting-edge implementation of DECAF.&nbsp;&nbsp;Shown below are the results of various tests run across various versions of this software.&nbsp;&nbsp;We provide Hardware and Software specifications so these tests can be recreated at a future date.&nbsp;&nbsp;All time-based results are averaged over 3 trial runs (except for 1944+ State Models).</p>
+          <p>Mihir Sanghavi and Sashank Tadepalli, undergraduate students at New Jersey Institute of Technology alongside Professor Marvin Nakayama, have developed a cutting-edge implementation of DECAF.&nbsp;&nbsp;Shown below are the results of various tests run across various versions of this software.&nbsp;&nbsp;We provide Hardware and Software specifications so these tests can be recreated at a future date.&nbsp;&nbsp;All time-based results are averaged over 3 trial runs (except for 1944+ State Models).</p>
           <h3>Versions</h3>
           <p>
             Version 1.0 and 1.5 are the initial versions of DECAF.  The essential algorithms and program logic is created in Version 1.0, as well as some naive implementations of the Tree Generation algorithm.  Version 1.5 adds some performance enhancements in the form of caching.   The caching occurs at an analytical level as well as software/programming level.  Essentially, every transition from F to T is treated as a LikeTransition.   When we accumulate all of the LikeTransitions, it becomes apparent that the program does not need to recreate trees for the same LikeTransition.
@@ -165,6 +165,18 @@
                   <td fastest>0.891594528</td>
               </tr>
               <tr>
+                  <td>MTTF Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
+                  <td>SSU Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
                   <td># of Reused Trees</td>
                   <td>0</td>
                   <td>4104</td>
@@ -202,6 +214,18 @@
                   <td fastest>6.043573247</td>
               </tr>
               <tr>
+                  <td>MTTF Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
+                  <td>SSU Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
                   <td># of Reused Trees</td>
                   <td>0</td>
                   <td>13830</td>
@@ -237,6 +261,18 @@
                   <td slowest>2374.502689</td>
                   <td>118.9196693</td>
                   <td fastest>17.03615324</td>
+              </tr>
+              <tr>
+                  <td>MTTF Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
+                  <td>SSU Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
               </tr>
               <tr>
                   <td># of Reused Trees</td>
@@ -313,6 +349,18 @@
                   <td fastest>213.7326432</td>
               </tr>
               <tr>
+                  <td>MTTF Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
+                  <td>SSU Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
                   <td># of Reused Trees</td>
                   <td>0</td>
                   <td>34560</td>
@@ -348,6 +396,18 @@
                   <td slowest>Pending</td>
                   <td>4200.160334</td>
                   <td fastest>1198.807579</td>
+              </tr>
+              <tr>
+                  <td>MTTF Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
+              </tr>
+              <tr>
+                  <td>SSU Calculation (s)</td>
+                  <td slowest></td>
+                  <td></td>
+                  <td fastest></td>
               </tr>
               <tr>
                   <td># of Reused Trees</td>
