Updated MTTF data

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <table>
               <thead>
                 <tr>
-                    <th colspan="4">81 State Model (3803 Trees)</th>
+                    <th colspan="4">81 State Model</th>
                 </tr>
                 <tr>
                     <td></td>
@@ -110,28 +110,52 @@
                 </tr>
               </thead>
               <tr>
-                  <td>XML Parsing (s)</td>
+                  <td class="first">XML Parsing (s)</td>
                   <td slowest>0.538195872</td>
                   <td>0.347897412</td>
                   <td fastest>0.347859024</td>
               </tr>
               <tr>
-                  <td>State Generation (s)</td>
+                  <td class="first">State  Generation (s)</td>
                   <td>0.009461472</td>
                   <td slowest>0.014582006</td>
                   <td fastest>0.004763136</td>
               </tr>
               <tr>
-                  <td>QMatrix Generation (s)</td>
+                  <td class="first">QMatrix Generation (s)</td>
                   <td slowest>1.405532655</td>
                   <td>0.677618467</td>
                   <td fastest>0.377838848</td>
               </tr>
               <tr>
-                  <td># of Reused Trees</td>
-                  <td>0</td>
+                  <td class="first">MTTF Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>0.124284688</td>
+              </tr>
+              <tr>
+                  <td class="first">SSU Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>Pending</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Trees</td>
+                  <td>3803</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Reused Trees</td>
+                  <td>79</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Transitions</td>
                   <td>810</td>
-                  <td>810</td>
+                  <td>" "</td>
+                  <td>" "</td>
               </tr>
             </table>
             <table>
@@ -147,40 +171,52 @@
                 </tr>
               </thead>
               <tr>
-                  <td>XML Parsing (s)</td>
+                  <td class="first">XML Parsing (s)</td>
                   <td slowest>0.703253968</td>
                   <td>0.470909536</td>
                   <td fastest>0.349191504</td>
               </tr>
               <tr>
-                  <td>State Generation (s)</td>
+                  <td class="first">State  Generation (s)</td>
                   <td slowest>0.084235264</td>
                   <td>0.023053952</td>
                   <td fastest>0.008494096</td>
               </tr>
               <tr>
-                  <td>QMatrix Generation (s)</td>
+                  <td class="first">QMatrix Generation (s)</td>
                   <td slowest>22.94189494</td>
                   <td>9.447867808</td>
                   <td fastest>0.891594528</td>
               </tr>
               <tr>
-                  <td>MTTF Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">MTTF Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>0.975974832</td>
               </tr>
               <tr>
-                  <td>SSU Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">SSU Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>Pending</td>
               </tr>
               <tr>
-                  <td># of Reused Trees</td>
-                  <td>0</td>
+                  <td class="first"># of Trees</td>
+                  <td>42816</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Reused Trees</td>
+                  <td>143</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Transitions</td>
                   <td>4104</td>
-                  <td>4104</td>
+                  <td>" "</td>
+                  <td>" "</td>
               </tr>
             </table>
             <table>
@@ -196,46 +232,58 @@
                 </tr>
               </thead>
               <tr>
-                  <td>XML Parsing (s)</td>
+                  <td class="first">XML Parsing (s)</td>
                   <td slowest>0.530996081</td>
                   <td>0.483729645</td>
                   <td fastest>0.262888448</td>
               </tr>
               <tr>
-                  <td>State Generation (s)</td>
+                  <td class="first">State  Generation (s)</td>
                   <td>0.030771120</td>
                   <td slowest>0.118595665</td>
                   <td fastest>0.011125088</td>
               </tr>
               <tr>
-                  <td>QMatrix Generation (s)</td>
+                  <td class="first">QMatrix Generation (s)</td>
                   <td slowest>349.5213188</td>
                   <td>91.86788622</td>
                   <td fastest>6.043573247</td>
               </tr>
               <tr>
-                  <td>MTTF Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">MTTF Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>10.63572488</td>
               </tr>
               <tr>
-                  <td>SSU Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">SSU Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>Pending</td>
               </tr>
               <tr>
-                  <td># of Reused Trees</td>
-                  <td>0</td>
+                  <td class="first"># of Trees</td>
+                  <td>437866</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Reused Trees</td>
+                  <td>319</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Transitions</td>
                   <td>13830</td>
-                  <td>13830</td>
+                  <td>" "</td>
+                  <td>" "</td>
               </tr>
             </table>
             <table>
               <thead>
                 <tr>
-                    <th colspan="4">1440 State Model (185064 Trees)</th>
+                    <th colspan="4">1440 State Model</th>
                 </tr>
                 <tr>
                     <td></td>
@@ -245,46 +293,58 @@
                 </tr>
               </thead>
               <tr>
-                  <td>XML Parsing (s)</td>
+                  <td class="first">XML Parsing (s)</td>
                   <td>0.486194976</td>
                   <td slowest>0.568334416</td>
                   <td fastest>0.328434512</td>
               </tr>
               <tr>
-                  <td>State Generation (s)</td>
+                  <td class="first">State  Generation (s)</td>
                   <td>0.095746464</td>
                   <td slowest>0.123831472</td>
                   <td fastest>0.017252384</td>
               </tr>
               <tr>
-                  <td>QMatrix Generation (s)</td>
+                  <td class="first">QMatrix Generation (s)</td>
                   <td slowest>2374.502689</td>
                   <td>118.9196693</td>
                   <td fastest>17.03615324</td>
               </tr>
               <tr>
-                  <td>MTTF Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">MTTF Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>127.3237950</td>
               </tr>
               <tr>
-                  <td>SSU Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">SSU Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>Pending</td>
               </tr>
               <tr>
-                  <td># of Reused Trees</td>
-                  <td>0</td>
+                  <td class="first"># of Trees</td>
+                  <td>185064</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Reused Trees</td>
+                  <td>719</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Transitions</td>
                   <td>35586</td>
-                  <td>35586</td>
+                  <td>" "</td>
+                  <td>" "</td>
               </tr>
             </table>
             <table>
               <thead>
                 <tr>
-                    <th colspan="4">1944 State Model (194404 Trees)</th>
+                    <th colspan="4">1944 State Model</th>
                 </tr>
                 <tr>
                     <td></td>
@@ -294,34 +354,58 @@
                 </tr>
               </thead>
               <tr>
-                  <td>XML Parsing (s)</td>
+                  <td class="first">XML Parsing (s)</td>
                   <td slowest>0.588945296</td>
                   <td>0.503568608</td>
                   <td fastest>0.264800304</td>
               </tr>
               <tr>
-                  <td>State Generation (s)</td>
+                  <td class="first">State  Generation (s)</td>
                   <td slowest>0.047809611</td>
                   <td>0.039703648</td>
                   <td fastest>0.018026912</td>
               </tr>
               <tr>
-                  <td>QMatrix Generation (s)</td>
+                  <td class="first">QMatrix Generation (s)</td>
                   <td slowest>7722.709750</td>
                   <td>425.7825838</td>
                   <td fastest>14.10575419</td>
               </tr>
               <tr>
-                  <td># of Reused Trees</td>
-                  <td>0</td>
+                  <td class="first">MTTF Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest> 311.432560</td>
+              </tr>
+              <tr>
+                  <td class="first">SSU Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>Pending</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Trees</td>
+                  <td>194404</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Reused Trees</td>
+                  <td>971</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Transitions</td>
                   <td>46488</td>
-                  <td>46488</td>
+                  <td>" "</td>
+                  <td>" "</td>
               </tr>
             </table>
             <table>
               <thead>
                 <tr>
-                    <th colspan="4">4096 State Model (49664 Trees)</th>
+                    <th colspan="4">4096 State Model</th>
                 </tr>
                 <tr>
                     <td></td>
@@ -331,40 +415,52 @@
                 </tr>
               </thead>
               <tr>
-                  <td>XML Parsing (s)</td>
+                  <td class="first">XML Parsing (s)</td>
                   <td slowest>0.571897376</td>
                   <td>0.518986208</td>
                   <td fastest>0.327514634</td>
               </tr>
               <tr>
-                  <td>State Generation (s)</td>
+                  <td class="first">State  Generation (s)</td>
                   <td slowest>0.164754384</td>
                   <td>0.127744208</td>
                   <td fastest>0.029360624</td>
               </tr>
               <tr>
-                  <td>QMatrix Generation (s)</td>
+                  <td class="first">QMatrix Generation (s)</td>
                   <td slowest>33308.70585</td>
                   <td>1521.175887</td>
                   <td fastest>213.7326432</td>
               </tr>
               <tr>
-                  <td>MTTF Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">MTTF Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>0.124284688</td>
               </tr>
               <tr>
-                  <td>SSU Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">SSU Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>Pending</td>
               </tr>
               <tr>
-                  <td># of Reused Trees</td>
-                  <td>0</td>
-                  <td>34560</td>
-                  <td>34560</td>
+                  <td class="first"># of Trees</td>
+                  <td>3803</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Reused Trees</td>
+                  <td>79</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Transitions</td>
+                  <td>810</td>
+                  <td>" "</td>
+                  <td>" "</td>
               </tr>
             </table>
             <table>
@@ -380,40 +476,52 @@
                 </tr>
               </thead>
               <tr>
-                  <td>XML Parsing (s)</td>
+                  <td class="first">XML Parsing (s)</td>
                   <td slowest>0.526125392</td>
                   <td>0.480173344</td>
                   <td fastest>0.327510112</td>
               </tr>
               <tr>
-                  <td>State Generation (s)</td>
+                  <td class="first">State  Generation (s)</td>
                   <td slowest>0.277208336</td>
                   <td>0.127744208</td>
                   <td fastest>0.037197824</td>
               </tr>
               <tr>
-                  <td>QMatrix Generation (s)</td>
+                  <td class="first">QMatrix Generation (s)</td>
                   <td slowest>Pending</td>
                   <td>4200.160334</td>
                   <td fastest>1198.807579</td>
               </tr>
               <tr>
-                  <td>MTTF Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">MTTF Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>0.124284688</td>
               </tr>
               <tr>
-                  <td>SSU Calculation (s)</td>
-                  <td slowest></td>
-                  <td></td>
-                  <td fastest></td>
+                  <td class="first">SSU Calculation (s)</td>
+                  <td slowest>Pending</td>
+                  <td>Pending</td>
+                  <td fastest>Pending</td>
               </tr>
               <tr>
-                  <td># of Reused Trees</td>
-                  <td>0</td>
-                  <td>52864</td>
-                  <td>52864</td>
+                  <td class="first"># of Trees</td>
+                  <td>3803</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Reused Trees</td>
+                  <td>79</td>
+                  <td>" "</td>
+                  <td>" "</td>
+              </tr>
+              <tr>
+                  <td class="first"># of Transitions</td>
+                  <td>810</td>
+                  <td>" "</td>
+                  <td>" "</td>
               </tr>
           </table>
         </section>
