--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                   <td class="first">QMatrix Generation (s)</td>
                   <td slowest>1.405532655</td>
                   <td>0.677618467</td>
-                  <td fastest>0.377838848</td>
+                  <td fastest>0.321383432</td>
               </tr>
               <tr>
                   <td class="first">MTTF Calculation (s)</td>
                   <td slowest>Pending</td>
                   <td>Pending</td>
-                  <td fastest>0.124284688</td>
+                  <td fastest>0.090715443</td>
               </tr>
               <tr>
                   <td class="first">SSU Calculation (s)</td>
@@ -161,7 +161,7 @@
             <table>
               <thead>
                 <tr>
-                    <th colspan="4">288 State Model (42816 Trees)</th>
+                    <th colspan="4">288 State Model</th>
                 </tr>
                 <tr>
                     <td></td>
@@ -186,13 +186,13 @@
                   <td class="first">QMatrix Generation (s)</td>
                   <td slowest>22.94189494</td>
                   <td>9.447867808</td>
-                  <td fastest>0.891594528</td>
+                  <td fastest>1.168012008</td>
               </tr>
               <tr>
                   <td class="first">MTTF Calculation (s)</td>
                   <td slowest>Pending</td>
                   <td>Pending</td>
-                  <td fastest>0.975974832</td>
+                  <td fastest>0.339848669</td>
               </tr>
               <tr>
                   <td class="first">SSU Calculation (s)</td>
@@ -222,7 +222,7 @@
             <table>
               <thead>
                 <tr>
-                    <th colspan="4">640 State Model (437866 Trees)</th>
+                    <th colspan="4">640 State Model</th>
                 </tr>
                 <tr>
                     <td></td>
@@ -247,13 +247,13 @@
                   <td class="first">QMatrix Generation (s)</td>
                   <td slowest>349.5213188</td>
                   <td>91.86788622</td>
-                  <td fastest>6.043573247</td>
+                  <td fastest>7.718860109</td>
               </tr>
               <tr>
                   <td class="first">MTTF Calculation (s)</td>
                   <td slowest>Pending</td>
                   <td>Pending</td>
-                  <td fastest>10.63572488</td>
+                  <td fastest>2.904746433</td>
               </tr>
               <tr>
                   <td class="first">SSU Calculation (s)</td>
@@ -308,13 +308,13 @@
                   <td class="first">QMatrix Generation (s)</td>
                   <td slowest>2374.502689</td>
                   <td>118.9196693</td>
-                  <td fastest>17.03615324</td>
+                  <td fastest>10.71318448</td>
               </tr>
               <tr>
                   <td class="first">MTTF Calculation (s)</td>
                   <td slowest>Pending</td>
                   <td>Pending</td>
-                  <td fastest>127.3237950</td>
+                  <td fastest>37.83227052</td>
               </tr>
               <tr>
                   <td class="first">SSU Calculation (s)</td>
@@ -369,13 +369,13 @@
                   <td class="first">QMatrix Generation (s)</td>
                   <td slowest>7722.709750</td>
                   <td>425.7825838</td>
-                  <td fastest>14.10575419</td>
+                  <td fastest>18.31730186</td>
               </tr>
               <tr>
                   <td class="first">MTTF Calculation (s)</td>
                   <td slowest>Pending</td>
                   <td>Pending</td>
-                  <td fastest> 311.432560</td>
+                  <td fastest>93.84724735</td>
               </tr>
               <tr>
                   <td class="first">SSU Calculation (s)</td>
@@ -430,13 +430,13 @@
                   <td class="first">QMatrix Generation (s)</td>
                   <td slowest>33308.70585</td>
                   <td>1521.175887</td>
-                  <td fastest>213.7326432</td>
+                  <td fastest>230.85232572</td>
               </tr>
               <tr>
                   <td class="first">MTTF Calculation (s)</td>
                   <td slowest>Pending</td>
                   <td>Pending</td>
-                  <td fastest>0.124284688</td>
+                  <td fastest>861.74171647</td>
               </tr>
               <tr>
                   <td class="first">SSU Calculation (s)</td>
@@ -466,7 +466,7 @@
             <table>
               <thead>
                 <tr>
-                    <th colspan="4">6144 State Model (75520 Trees)</th>
+                    <th colspan="4">6144 State Model</th>
                 </tr>
                 <tr>
                     <td></td>
