Updated big state benches

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 CPU
               </td>
               <td>
-                2.7 Ghz (Intel Xeon 2667) @ 4x32 + 4x32 + 4x6144
+                2.7 Ghz (Intel Xeon 2667) Single Core
               </td>
             </tr>
             <tr>
@@ -436,7 +436,7 @@
                   <td class="first">MTTF Calculation (s)</td>
                   <td slowest>Pending</td>
                   <td>Pending</td>
-                  <td fastest>861.74171647</td>
+                  <td fastest>Pending</td>
               </tr>
               <tr>
                   <td class="first">SSU Calculation (s)</td>
@@ -446,19 +446,19 @@
               </tr>
               <tr>
                   <td class="first"># of Trees</td>
-                  <td>3803</td>
+                  <td>49664</td>
                   <td>" "</td>
                   <td>" "</td>
               </tr>
               <tr>
                   <td class="first"># of Reused Trees</td>
-                  <td>79</td>
+                  <td>4094</td>
                   <td>" "</td>
                   <td>" "</td>
               </tr>
               <tr>
                   <td class="first"># of Transitions</td>
-                  <td>810</td>
+                  <td>34560</td>
                   <td>" "</td>
                   <td>" "</td>
               </tr>
@@ -507,19 +507,19 @@
               </tr>
               <tr>
                   <td class="first"># of Trees</td>
-                  <td>3803</td>
+                  <td>75520</td>
                   <td>" "</td>
                   <td>" "</td>
               </tr>
               <tr>
                   <td class="first"># of Reused Trees</td>
-                  <td>79</td>
+                  <td>6142</td>
                   <td>" "</td>
                   <td>" "</td>
               </tr>
               <tr>
                   <td class="first"># of Transitions</td>
-                  <td>810</td>
+                  <td>52864</td>
                   <td>" "</td>
                   <td>" "</td>
               </tr>
